# Network_Mamba

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  strong.yaml
docs/: addendum.tex  addendum2.tex  presentation_notes.md  proposal.tex  proposal_brief.tex  proposal_final.tex  proposal_v2.tex  report.tex  results.md  results.tex  results_multi.tex  study_guide.md
flowmamba/: __init__.py  cli.py  config.py  utils.py
flowmamba/data/: __init__.py  ciciot.py  dataset.py  features.py  preprocess.py  synthetic.py
flowmamba/eval/: __init__.py  adversarial.py  baselines.py  metrics.py  zeroday.py
flowmamba/explain/: __init__.py  shap_explain.py
flowmamba/inference/: __init__.py  runner.py
flowmamba/models/: __init__.py  detector.py  heads.py  mamba.py
flowmamba/training/: __init__.py  anomaly.py  continual.py  finetune.py  losses.py  pretrain.py
scripts/: demo.py
tests/: test_smoke.py
