[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmamba"
version = "0.1.0"
description = "Flow-pattern anomaly detection at the IoT gateway: a pre-trained Mamba detector for known and zero-day attacks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Madhav Dogra" }]
keywords = ["intrusion-detection", "iot", "mamba", "anomaly-detection", "network-security"]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dl = ["torch>=2.1", "shap>=0.44"]
baselines = ["xgboost>=2.0"]
pcap = ["dpkt>=1.9"]
viz = ["matplotlib>=3.7", "umap-learn>=0.5"]
all = ["torch>=2.1", "shap>=0.44", "xgboost>=2.0", "dpkt>=1.9", "matplotlib>=3.7", "umap-learn>=0.5"]

[project.scripts]
flowmamba = "flowmamba.cli:main"

[tool.setuptools.packages.find]
include = ["flowmamba*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
